fix localstorage and add refresh token
