# docs/swagger.yaml
@@ -420,6 +420,41 @@ paths:
       summary: Login
       tags:
       - Auth
+  /refresh-token:
+    post:
+      consumes:
+      - application/json
+      description: refresh access token
+      operationId: refresh-token
+      parameters:
+      - description: Refresh Token
+        in: body
+        name: refresh_token
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Refresh Access Token
+      tags:
+      - Auth
   /users:
     get:
       consumes:
